Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-16711

Regression, many apps behave differently since folder attributes have been changed to support desktop.inis where no desktop.inis should be

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.14
    • None

    Description

      Changing the folder attributes to system, hidden or read-only just to display an icon via desktop.ini is not side-effect-free. Within just 5minutes I found 3regressions:

      • the app Total Commander in default configuration does not longer show the C:\program files folder.
      • If we leave it like it is, then later ros will also show the invisible desktop.ini on the Desktop when "Show hidden files" will be selected.
      • dir cmd does not longer display the Desktop folder in users home dir

      Those are not all, just the side-effects that I spotted with 5minutes of testing. Also bogus-bug-reports like CORE-16709 and hacking our dir binary to workaround are highly contraproductive.
      2k3sp2 and XPSP3 do not use desktop.inis in most of these folders, and so shouldn't we.

      We can list all desktop.inis using

      C:\>dir /S /B desktop.ini /AH > outputfile.txt
      

      I attached a listing of all desktop.inis of ros and 2k3sp2. We should strip the additional desktop.inis and restore the parent folders attributes asap.
      ros_desktopinis_0.4.14-dev-1031-g5d8c397.txt
      2k3sp2_desktopinis.txt

      Attachments

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            reactosfanboy reactosfanboy
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: