[SHELL32] Set read-only for some shell folders and delete Desktop.ini of Desktop and Program Files (#2385)

Set read-only attribute instead of system attribute for some shell folders that has a folder icon.
Delete desktop.ini files in Desktop and Program Files. CORE-16711